fixed 2 bugs - added z-index so that the summary overlay doesn't impede the overlay board - added additional check for shift key when saving details description so that new lines can be used - also fixed some text in the README

--- a/notes-calendar.css
+++ b/notes-calendar.css
@@ -53,6 +53,7 @@
     border: 1px solid #ccc;
     border-radius: 4px;
     background-color: #f8f8f8;
+    z-index: 2;
 }
 
 .note-board-summary {
@@ -85,6 +86,7 @@
 
 .calendar-summary-overlay {
     background-color: #f8f8f8;
+    z-index: 1;
 }
 
 .calendar-summary {
